--- a/android/app/src/main/res/xml/config.xml
+++ b/android/app/src/main/res/xml/config.xml
@@ -2,6 +2,14 @@
 <widget version="1.0.0" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
   <access origin="*" />
   
+  <feature name="BrowserTab">
+    <param name="android-package" value="com.google.cordova.plugin.browsertab.BrowserTab"/>
+  </feature>
+
+  <feature name="NativeStorage">
+    <param name="android-package" value="NativeStorage"/>
+  </feature>
+
   <feature name="CordovaStepCounter">
     <param name="android-package" value="net.texh.cordovapluginstepcounter.CordovaStepCounter"/>
   </feature>
