removed the browsertab plugin because it is incompatible with gradle. added backgroundmode plugin for the app to count in the background, styled a bit the main page and added the stop and start actions for the user to choose

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,15 +1,25 @@
-<ion-header [translucent]="true">
+<!-- <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
       StepCounter
     </ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content [fullscreen]="true">
-  
-  <div>
+
+  <h1>Steps</h1>
+
+  <div class="header-border">
     {{steps}}
   </div>
 
 </ion-content>
+
+<ion-footer>
+  
+  <ion-button fill="outline" shape="round" (click)="changeAction()" [disabled]="!canCount">
+    {{action}}
+  </ion-button>
+
+</ion-footer>
