setting up background location to calculate diastance walked. added more plugins to make my and the user's lives easier (need npm i).

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -26,7 +26,7 @@
 
   <br>
 
-  <ion-button fill="outline" shape="round" (click)="analyze({steps: this.steps})" [disabled]="steps <= 0">
+  <ion-button fill="outline" shape="round" (click)="analyze()" [disabled]="steps <= 0">
     Analyze
   </ion-button>
 
